--- a/UserList.html
+++ b/UserList.html
@@ -51,7 +51,7 @@
 <div class="popup" id="profilePopup">
     <img src="" alt="Profile Photo" id="popupImg">
     <h2 id="popupName"></h2>
-    <p id="popupDescription"></p>
+    <p id="popupbio"></p>
     <button class="close-btn" onclick="closePopup()">Close</button>
 </div>
 
@@ -80,19 +80,19 @@
     };
 
     const otherUserProfiles = [
-        { name: "Taylor", description: "Enjoys reading and gaming.", interests: ["Reading", "Gaming", "Cooking"], hobbies: ["Writing", "Traveling"], profession: "Writer", img: "Profile1.jpg" },
-        { name: "Jamie", description: "Likes hiking and cooking.", interests: ["Hiking", "Cooking", "Music"], hobbies: ["Traveling", "Painting"], profession: "Graphic Designer", img: "Profile2.jpg" },
-        { name: "Morgan", description: "Travels often and enjoys music.", interests: ["Hiking", "Reading", "Cooking"], hobbies: ["Photography", "Traveling"], profession: "Data Scientist", img: "Profile3.jpg" },
-        { name: "James" , description: "Likes watching movies and running" , interests:["Movies" , "Running" , "Fitness"] , hobbies: ["Star Wars" , "Running"], profession: "Business Analyst" , img: "Profile1.jpg"},
-        { name: "Cameron", description: "Tech enthusiast and coder.", interests: ["Programming", "Gaming", "Music"], hobbies: ["Robotics", "3D Printing"], profession: "Software Developer", img: "Profile1.jpg" },
-        { name: "Charlie", description: "Fitness freak and health coach.", interests: ["Fitness", "Cooking", "Meditation"], hobbies: ["Yoga", "Cycling"], profession: "Personal Trainer", img: "Profile2.jpg" },
-        { name: "Peyton", description: "Creative artist and designer.", interests: ["Painting", "Design", "Photography"], hobbies: ["Sketching", "Traveling"], profession: "Graphic Designer", img: "Profile1.jpg" }
+        { name: "Taylor", bio: "Enjoys reading and gaming.", interests: ["Reading", "Gaming", "Cooking"], profession: "Writer", img: "Profile1.jpg" },
+        { name: "Jamie", bio: "Likes hiking and cooking.", interests: ["Hiking", "Cooking", "Music"], profession: "Graphic Designer", img: "Profile2.jpg" },
+        { name: "Morgan", bio: "Travels often and enjoys music.", interests: ["Hiking", "Reading", "Cooking"], profession: "Data Scientist", img: "Profile3.jpg" },
+        { name: "James" , bio: "Likes watching movies and running" , interests:["Movies" , "Running" , "Fitness"] , profession: "Business Analyst" , img: "Profile1.jpg"},
+        { name: "Cameron", bio: "Tech enthusiast and coder.", interests: ["Programming", "Gaming", "Music"], profession: "Software Developer", img: "Profile1.jpg" },
+        { name: "Charlie", bio: "Fitness freak and health coach.", interests: ["Fitness", "Cooking", "Meditation"], profession: "Personal Trainer", img: "Profile2.jpg" },
+        { name: "Peyton", bio: "Creative artist and designer.", interests: ["Painting", "Design", "Photography"], profession: "Graphic Designer", img: "Profile1.jpg" }
     ];
 
     const friendUserProfiles = [
-        { name: "Robin", description: "Nature lover and explorer.", interests: ["Hiking", "Nature", "Bird Watching"], hobbies: ["Photography", "Camping"], profession: "Environmental Scientist", img: "Profile2.jpg" },
-        { name: "Jordan", description: "Tech enthusiast and startup founder.", interests: ["Programming", "Startups", "Gaming"], hobbies: ["Robotics", "AI Research"], profession: "Entrepreneur", img: "Profile3.jpg" },
-        { name: "Alexis", description: "Musician and artist.", interests: ["Music", "Art", "Writing"], hobbies: ["Playing Guitar", "Painting"], profession: "Musician", img: "Profile1.jpg" }
+        { name: "Robin", bio: "Nature lover and explorer.", interests: ["Hiking", "Nature", "Bird Watching"], profession: "Environmental Scientist", img: "Profile2.jpg" },
+        { name: "Jordan", bio: "Tech enthusiast and startup founder.", interests: ["Programming", "Startups", "Gaming"], profession: "Entrepreneur", img: "Profile3.jpg" },
+        { name: "Alexis", bio: "Musician and artist.", interests: ["Music", "Art", "Writing"], profession: "Musician", img: "Profile1.jpg" }
     ];
 
     const heartState = {}; // To track heart icon state
@@ -217,24 +217,54 @@
     }
 
     async function generateSortedProfiles() {
+        // Create a sanitized version of the user profile excluding the image data
+        const sanitizedCurrentUserProfile = {
+            name: currentUserProfile.name,
+            age: currentUserProfile.age,
+            interests: currentUserProfile.interests,
+            gender: currentUserProfile.gender,
+            bio: currentUserProfile.bio,
+            profession: currentUserProfile.profession
+        };
+
+        // Create sanitized versions of the other user profiles excluding the image data
+        const sanitizedOtherUserProfiles = otherUserProfiles.map(profile => ({
+            name: profile.name,
+            age: profile.age,
+            interests: profile.interests,
+            gender: profile.gender,
+            bio: profile.bio, // Correctly assign each profile's bio
+            profession: profile.profession
+        }));
+
         const response = await fetch(
-          'https://noggin.rea.gent/curved-rabbit-5970',
-          {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-              Authorization: 'Bearer rg_v1_4wgriw1jfbod0eub1pnab0dvshzoggz5c8kz_ngk',
-            },
-            body: JSON.stringify({
-                userProfile: JSON.stringify(currentUserProfile),
-                otherProfiles: JSON.stringify(otherUserProfiles)
-            }),
-          }
+            'https://noggin.rea.gent/curved-rabbit-5970',
+            {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    Authorization: 'Bearer rg_v1_4wgriw1jfbod0eub1pnab0dvshzoggz5c8kz_ngk',
+                },
+                body: JSON.stringify({
+                    userProfile: JSON.stringify(sanitizedCurrentUserProfile),
+                    otherProfiles: JSON.stringify(sanitizedOtherUserProfiles)
+                }),
+            }
         );
 
         const sortedProfiles = await response.json();
+
+        // Reattach images to the sorted profiles
+        sortedProfiles.forEach(sortedProfile => {
+            const originalProfile = otherUserProfiles.find(profile => profile.name === sortedProfile.name);
+            if (originalProfile) {
+                sortedProfile.img = originalProfile.img;
+            }
+        });
+
         otherUserProfiles.length = 0;
         sortedProfiles.forEach(profile => otherUserProfiles.push(profile));
+
         const profilesContainer = document.getElementById('profilesContainer');
         profilesContainer.innerHTML = '';
         sortedProfiles.forEach(profile => {
@@ -244,32 +274,28 @@
         applyHeartStates();
     }
 
-    
-
-    
-
     function createProfileDiv(profile) {
         const profileDiv = document.createElement('div');
         profileDiv.classList.add('profile');
         profileDiv.setAttribute('data-name', profile.name);
-        profileDiv.setAttribute('data-description', profile.description);
+        profileDiv.setAttribute('data-bio', profile.bio);
         profileDiv.setAttribute('data-img', profile.img);
 
         const img = document.createElement('img');
         img.src = profile.img;
         img.alt = 'User Photo';
 
-        const descriptionDiv = document.createElement('div');
-        descriptionDiv.classList.add('profile-description');
+        const bioDiv = document.createElement('div');
+        bioDiv.classList.add('profile-bio');
 
         const name = document.createElement('h2');
         name.textContent = profile.name;
 
-        const description = document.createElement('p');
-        description.textContent = profile.description;
+        const bio = document.createElement('p');
+        bio.textContent = profile.bio;
 
-        descriptionDiv.appendChild(name);
-        descriptionDiv.appendChild(description);
+        bioDiv.appendChild(name);
+        bioDiv.appendChild(bio);
 
         const heart = document.createElement('span');
         heart.classList.add('heart');
@@ -277,7 +303,7 @@
         heart.addEventListener('click', toggleHeart);
 
         profileDiv.appendChild(img);
-        profileDiv.appendChild(descriptionDiv);
+        profileDiv.appendChild(bioDiv);
         profileDiv.appendChild(heart);
 
         profileDiv.addEventListener('click', function (event) {
@@ -303,7 +329,7 @@
 
     function showPopup(profile) {
         document.getElementById('popupName').innerText = profile.name;
-        document.getElementById('popupDescription').innerText = profile.description;
+        document.getElementById('popupbio').innerText = profile.bio;
         document.getElementById('popupImg').src = profile.img;
         document.getElementById('profilePopup').style.display = 'block';
     }
