--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -13,15 +13,12 @@
         <h1>Login</h1>
         <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
         <div class="menu-content" id="menuContent">
-            <a href="bar_landing_page.html">Home</a>
-            <a href="profile.html">Profile</a>
-            <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
             <a href="mission.html">Mission</a>
         </div>
     </header>
     <div class="login-container">
-        <img src="Logo.png" alt="Over Drinks Logo" class="logo">
+        <img src="Logo.png" alt="Over Drinks Logo" id="logo">
         <h2 class="text-center">Login</h2>
         <form id="loginForm">
             <div class="form-group">
