--- a/MatchesList.html
+++ b/MatchesList.html
@@ -18,6 +18,8 @@
             <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
             <a href="mission.html">Mission</a>
+            <a href="#" onclick="logout()">Logout</a>
+
         </div>
     </header>
     <div class="container">
@@ -79,6 +81,11 @@
                 localStorage.removeItem("inviteClicked");
             }
         }
+
+        function logout() {
+        localStorage.clear(); // Clear all local storage data
+        window.location.href = 'LoginScreen2.html'; // Redirect to login page
+    }
     </script>
 </body>
 </html>
