--- a/Mission.html
+++ b/Mission.html
@@ -18,6 +18,8 @@
             <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
             <a href="mission.html">Missons</a>
+            <a href="#" onclick="logout()">Logout</a>
+
         </div>
     </header>
     <div class="container">
@@ -31,6 +33,10 @@
             const menuContent = document.getElementById('menuContent');
             menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
         }
+        function logout() {
+        localStorage.clear(); // Clear all local storage data
+        window.location.href = 'LoginScreen2.html'; // Redirect to login page
+    }
     </script>
 </body>
 </html>
