--- a/UserList.html
+++ b/UserList.html
@@ -18,6 +18,8 @@
         <a href="settings.html">Settings</a>
         <a href="faq.html">FAQs</a>
         <a href="mission.html">Mission</a>
+        <a href="#" onclick="logout()">Logout</a>
+
     </div>
 </header>
 
@@ -336,6 +338,11 @@
 
     function closePopup() {
         document.getElementById('profilePopup').style.display = 'none';
+    }
+
+    function logout() {
+        localStorage.clear(); // Clear all local storage data
+        window.location.href = 'LoginScreen2.html'; // Redirect to login page
     }
 
     loadInitialProfiles();
