--- a/faq.html
+++ b/faq.html
@@ -18,6 +18,8 @@
             <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
             <a href="mission.html">Mission</a>
+            <a href="#" onclick="logout()">Logout</a>
+
         </div>
     </header>
     <div class="faq-container">
@@ -43,6 +45,11 @@
             const menuContent = document.getElementById('menuContent');
             menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
         }
+
+        function logout() {
+        localStorage.clear(); // Clear all local storage data
+        window.location.href = 'LoginScreen2.html'; // Redirect to login page
+    }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
