--- a/profile.html
+++ b/profile.html
@@ -147,8 +147,13 @@
     <h1>Profile</h1>
     <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
     <div class="menu-content" id="menuContent">
+        <a href="bar_landing_page.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a href="settings.html">Settings</a>
         <a href="faq.html">FAQs</a>
         <a href="mission.html">Mission</a>
+        <a href="#" onclick="logout()">Logout</a>
+
     </div>
 </header>
 <div class="profile-container">
@@ -378,6 +383,11 @@
     function toggleMenu() {
         const menuContent = document.getElementById("menuContent");
         menuContent.style.display = menuContent.style.display === "block" ? "none" : "block";
+    }
+
+    function logout() {
+        localStorage.clear(); // Clear all local storage data
+        window.location.href = 'LoginScreen2.html'; // Redirect to login page
     }
 </script>
 <!-- Bootstrap JS and dependencies -->
