--- a/settings.html
+++ b/settings.html
@@ -21,6 +21,8 @@
             <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
             <a href="mission.html">Mission</a>
+            <a href="#" onclick="logout()">Logout</a>
+
         </div>
     </header>
     <div class="container" id="mainContent">
@@ -114,6 +116,11 @@
             document.body.style.backgroundColor = isDarkMode ? '#333' : '#f4f4f4';
             document.body.style.color = isDarkMode ? 'white' : 'black';
         };
+
+        function logout() {
+        localStorage.clear(); // Clear all local storage data
+        window.location.href = 'LoginScreen2.html'; // Redirect to login page
+    }
     </script>
 </body>
 </html>
